Solve Overflow Problem

--- a/Website_projet/CSS/global.css
+++ b/Website_projet/CSS/global.css
@@ -7,8 +7,6 @@ body {
   height: 100vh;
   width: 100%;
   position: relative;
-
-  overflow: hidden;
 }
 
 main {
